[tool.poetry]
name = "chroma-example"
version = "0.1.0"
description = ""
authors = ["leo-guinan <leo@copy.ai>"]
readme = "README.md"
packages = [{include = "chroma_example"}]

[tool.poetry.dependencies]
python = "^3.9"
chromadb = "^0.3.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
